tests/error/type_match/base_case_rvalue_to_lvalue_ref2.bz
// error: unable to match rvalue expression of type 'int32' to an lvalue reference '&const auto'
function test()
{
	let _: &const auto = 0i32;
}
